@@ -540,15 +540,20 @@ name|this
 operator|.
 name|scannerTimeout
 operator|=
+operator|(
+name|int
+operator|)
 name|conf
 operator|.
-name|getInt
+name|getLong
 argument_list|(
-literal|"hbase.regionserver.lease.period"
+name|HConstants
+operator|.
+name|HBASE_REGIONSERVER_LEASE_PERIOD_KEY
 argument_list|,
-literal|60
-operator|*
-literal|1000
+name|HConstants
+operator|.
+name|DEFAULT_HBASE_REGIONSERVER_LEASE_PERIOD
 argument_list|)
 expr_stmt|;
 name|this
