@@ -1770,9 +1770,9 @@ name|conf
 operator|.
 name|getLong
 argument_list|(
-literal|"hbase.regionserver.lease.period"
+name|HBASE_REGIONSERVER_LEASE_PERIOD_KEY
 argument_list|,
-literal|60000
+name|DEFAULT_HBASE_REGIONSERVER_LEASE_PERIOD
 argument_list|)
 expr_stmt|;
 name|reinitialize
@@ -2090,15 +2090,16 @@ operator|=
 operator|new
 name|Leases
 argument_list|(
+operator|(
+name|int
+operator|)
 name|conf
 operator|.
-name|getInt
+name|getLong
 argument_list|(
-literal|"hbase.regionserver.lease.period"
+name|HBASE_REGIONSERVER_LEASE_PERIOD_KEY
 argument_list|,
-literal|60
-operator|*
-literal|1000
+name|DEFAULT_HBASE_REGIONSERVER_LEASE_PERIOD
 argument_list|)
 argument_list|,
 name|this
